Fixed optgroup spacing when using optgroup_columns plugin.

--- a/src/plugins/optgroup_columns/plugin.less
+++ b/src/plugins/optgroup_columns/plugin.less
@@ -7,6 +7,9 @@
 	.optgroup:last-child {
 		border-right: 0 none;
 	}
+	.optgroup:before {
+		display: none;
+	}
 	.optgroup-header {
 		border-top: 0 none;
 	}
